--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#ff9800",
     "navigationBarTextStyle": "white",
-    "navigationBarTitleText": "噼里啪啦小铺"
+    "navigationBarTitleText": "饭宁杂货铺"
   },
   "tabBar": {
     "position": "bottom",
